v12.2.0 +
  * [FEATURE] - Implements multiselect of records
  * [TASK] - Streamline record handling in TypoScriptController
  * [TASK] - Improve flash message handling in TypoScriptController
  * [TASK] - Replace rector config "template" with non php file to prevent errors
  * [FIX] - Fix color allocation in legend

v12.1.0 +
  * [FEATURE] - View difference between original and processed TypoScript
  * [FIX] - Reviewed README installation instructions

v12.0.0 +
  * initial release 