@@ -1,4 +1,4 @@
-.db-rector__processing { position: absolute; display: none; justify-content: center; align-items: center; width: 100%; height: 100%; z-index: 1; background-color: rgba(255, 255, 255, 0.666); }
+.db-rector__processing { position: absolute; top: 0; left: 0; display: none; justify-content: center; align-items: center; width: 100%; height: 100%; z-index: 1; background-color: rgba(255, 255, 255, 0.666); }
 .db-rector__legends { list-style-type: none; padding: 0; margin: 0; }
 .db-rector__legend { display: inline-block; width: 15px; height: 15px; margin-right: 5px; }
 .db-rector__legend--info { background-color: #e3ecf4; }
