@@ -1,6 +1,8 @@
 .db-rector {
     &__processing {
         position:absolute;
+        top: 0;
+        left: 0;
         display:none;
         justify-content:center;
         align-items:center;
